--- a/package.json
+++ b/package.json
@@ -1,31 +1,31 @@
 {
   "name": "multistreaming-assist",
-  "version": "0.9.0",
-  "description": "This is multi streaming assist tool",
+  "version": "0.0.1",
+  "description": "This is multistreaming assist tool",
   "productName": "Multistreaming-Assist",
-  "author": "yjj8353 <yjj8353@gmail.com>",
+  "author": "RetroTV",
   "private": true,
   "scripts": {
-    "lint": "eslint --ext .js,.vue ./",
+    "lint": "eslint --ext .js,.ts,.vue ./",
     "test": "echo \"No test specified\" && exit 0"
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
-    "axios": "^0.21.0",
+    "@vue/composition-api": "^0.6.4",
+    "axios": "^0.18.1",
     "core-js": "^3.6.5",
-    "cors": "^2.8.5",
-    "follow-redirects": "^1.13.0",
     "quasar": "^1.0.0"
   },
   "devDependencies": {
     "@quasar/app": "^2.0.0",
+    "@types/node": "^10.17.15",
+    "@typescript-eslint/eslint-plugin": "^3.3.0",
+    "@typescript-eslint/parser": "^3.3.0",
     "babel-eslint": "^10.0.1",
     "devtron": "^1.4.0",
     "electron": "^9.0.0",
-    "electron-builder": "^22.4.0",
     "electron-debug": "^3.0.1",
     "electron-devtools-installer": "^3.0.0",
-    "electron-packager": "^14.1.1",
     "eslint": "^6.8.0",
     "eslint-config-standard": "^14.1.0",
     "eslint-loader": "^3.0.3",
